--- a/menu.html
+++ b/menu.html
@@ -10,17 +10,17 @@
 	<div class="header">
 		<a class="logo">Edmonton Comedy</a>
 		 <div class="header-right">
-    		<a class="active" href="yegcomedy.html">Home</a>
-    		<a class="active" href="yegcomedyshows.html">Shows</a>
-    		<a class="active" href="yegcomedyprofiles.html">Profiles</a>
-			<a class="image" href="yegcomedymenu.html"><img style="float:right;max-width:10%;" src="../../../Pictures/hamburger.png" width="35" height="28" alt=""/></a>
+    		<a class="active" href="index.html">Home</a>
+    		<a class="active" href="shows.html">Shows</a>
+    		<a class="active" href="profiles.html">Profiles</a>
+			<a class="image" href="menu.html"><img style="float:right;max-width:10%;" src="../../../Pictures/hamburger.png" width="35" height="28" alt=""/></a>
   		</div>
 		</div>
 	<center>
 	<div class="menu">
-		<a class="active" href="yegcomedy.html"><img style="visibility:visible; max-width: 75%; " src="HOME.png" alt=""/></a>
-	  <a class="active" href="yegcomedyshows.html"><img style="visibility:visible; max-width: 75%; " src="Shows.png" alt=""/></a>
-	  <a class="active" href="yegcomedyprofiles.html"><img style="visibility:visible; max-width: 75%; " src="Profiles.png" alt=""/></a>
+		<a class="active" href="index.html"><img style="visibility:visible; max-width: 75%; " src="HOME.png" alt=""/></a>
+	  <a class="active" href="shows.html"><img style="visibility:visible; max-width: 75%; " src="Shows.png" alt=""/></a>
+	  <a class="active" href="profiles.html"><img style="visibility:visible; max-width: 75%; " src="Profiles.png" alt=""/></a>
 	</div>
 	</center>
 	<div class="footer">
