--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <link href="yegcomedy.css" rel="stylesheet" type="text/css">
 <html>
 <head>
+<link rel="stylesheet" href="yegcomedy.css">
 <meta charset="utf-8">
 <title>yegcomedy</title>
 </head>
