--- a/menu.html
+++ b/menu.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link rel="stylesheet" href="yegcomedy.css">
 <title>yegcomedyshows</title>
 <link href="yegcomedy.css" rel="stylesheet" type="text/css">
 </head>
