--- a/shows.html
+++ b/shows.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+<link rel="stylesheet" href="yegcomedy.css">
 <meta charset="utf-8">
 <title>yegcomedyshows</title>
 <link href="yegcomedy.css" rel="stylesheet" type="text/css">
