--- a/profiles.html
+++ b/profiles.html
@@ -14,7 +14,7 @@
     		<a class="active" href="index.html">Home</a>
     		<a class="active" href="shows.html">Shows</a>
     		<a class="active" href="profiles.html">Profiles</a>
-			<a class="image" href="menu.html"><img style="float:right;max-width:10%" src="../../../Pictures/hamburger.png" width="35" height="28" alt=""/></a>
+			<a class="image" href="menu.html"><img style="float:right;max-width:10%" src="hamburger.png" width="35" height="28" alt=""/></a>
   		</div>
 		</div>
 	
