--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 		<center><a class="title">Announcements</a>
 		<a class="title"><img style="visibility: visible;max-width:60%;" src="Funniest.png" alt=""/></a>
 		<a class="title" style="font-family:'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, 'sans-serif';font-size:30px;">Funniest Person with a Day Job is back at the Comic Strip every Tuesday from April 12th to the finale on May 24th, 2022!</a>
+		<a class="title"><img style="visibility: visible;max-width:60%;" src="Ukraine.png" alt=""/></a>
+		<a class="title" style="font-family:'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, 'sans-serif';font-size:30px;">Comedy fundraiser for the Ukrainian Red Cross Effort on April 14th, 2022 8pm at the REC Room. All proceeds are going to charity!  </a>
 		</center>
 	</div>
 	<div class="footer">
