--- a/shows.html
+++ b/shows.html
@@ -103,7 +103,7 @@ sure to check with the link beforehand</p>
 			<a class="description" style="text-align:end">Free Admission</a>
 			<a class="description" href="https://www.facebook.com/groups/154323511419014" target="_blank"><img style="max-width:25px;visibility: visible;float:right" src="link.png" alt=""/></a>
 		</div>
-		<a class="shows"><img style="max-width:30%;visibility: visible;vertical-align: text-top;" src="Underdog.png" alt=""/></a>
+		<a class="shows"><img style="max-width:30%;visibility: visible;vertical-align: text-top;" src="underdog.png" alt=""/></a>
 		<a class="title">Friday</a>
 		<div class="text">
 			<a class="description" style="text-align:end">The Weekly</a>
