--- a/profiles.html
+++ b/profiles.html
@@ -19,6 +19,7 @@
 		</div>
 	
 	<div class="announcements">
+		<a class="title">Edmonton Comedians</a>
 		<center><a class="title">Kyle Canniff</a>
 		<a class="title"><img style="max-width:50%;visibility: visible;" src="Kyle.png" alt=""/></a>
 		<a class="title" href="instagram.com/native_moustache/" target="_blank"><img style="max-width:25px;visibility: visible;padding:0px;" src="link.png" alt=""/></a>
