--- a/profiles.html
+++ b/profiles.html
@@ -9,7 +9,7 @@
 
 <body>
 	<div class="header">
-		<a class="logo">Edmonton Comedy</a>
+		<a class="logo" style="font-family: Tonight">Edmonton Comedy</a>
 		 <div class="header-right">
     		<a class="active" href="index.html">Home</a>
     		<a class="active" href="shows.html">Shows</a>
@@ -19,36 +19,36 @@
 		</div>
 	
 	<div class="announcements">
-		<a class="title">Edmonton Comedians</a>
-		<center><a class="title">Kyle Canniff</a>
+		<a class="title" style="font-family: Tonight">Edmonton Comedians</a>
+		<center><a class="title" style="font-family: Tonight">Kyle Canniff</a>
 		<a class="title"><img style="max-width:50%;visibility: visible;" src="Kyle.png" alt=""/></a>
 		<a class="title" href="instagram.com/native_moustache/" target="_blank"><img style="max-width:25px;visibility: visible;padding:0px;" src="link.png" alt=""/></a>
 			
-		<a class="title">Sam Bayne</a>
+		<a class="title" style="font-family: Tonight">Sam Bayne</a>
 		<a class="title"><img style="max-width:50%;visibility: visible;" src="SamBayne.png" alt=""/></a>
 		<a class="title" href="https://www.instagram.com/samjbayne/" target="_blank"><img style="max-width:25px;visibility: visible;padding:0px;" src="link.png" alt=""/></a>
 			
-		<a class="title">Jim Kerr</a>
+		<a class="title" style="font-family: Tonight">Jim Kerr</a>
 		<a class="title"><img style="max-width:50%;visibility: visible;" src="JimKerr.png" alt=""/></a>
 		<a class="title" href="https://www.instagram.com/kerrzy/" target="_blank"><img style="max-width:25px;visibility: visible;padding:0px;" src="link.png" alt=""/></a>
 			
-		<a class="title">Cian Beatty</a>
+		<a class="title" style="font-family: Tonight">Cian Beatty</a>
 		<a class="title"><img style="max-width:50%;visibility: visible;" src="CianBeatty.png" alt=""/></a>
 		<a class="title" href="https://www.instagram.com/cian_beatty/" target="_blank"><img style="max-width:25px;visibility: visible;padding:0px;" src="link.png" alt=""/></a>
 			
-		<a class="title">Natasha Lyn Myles</a>
+		<a class="title" style="font-family: Tonight">Natasha Lyn Myles</a>
 		<a class="title"><img style="max-width:50%;visibility: visible;" src="Natasha.png" alt=""/></a>
 		<a class="title" href="https://www.instagram.com/natashalynmyles/" target="_blank"><img style="max-width:25px;visibility: visible;padding:0px;" src="link.png" alt=""/></a>
 			
-		<a class="title">Curtis Stone</a>
+		<a class="title" style="font-family: Tonight">Curtis Stone</a>
 		<a class="title"><img style="max-width:50%;visibility: visible;" src="Curtis.png" alt=""/></a>
 		<a class="title" href="https://www.instagram.com/stone_comedy/" target="_blank"><img style="max-width:25px;visibility: visible;padding:0px;" src="link.png" alt=""/></a>
 			
-		<a class="title">Dino Primo</a>
+		<a class="title" style="font-family: Tonight">Dino Primo</a>
 		<a class="title"><img style="max-width:50%;visibility: visible;" src="Dino.png" alt=""/></a>
 		<a class="title" href="https://www.instagram.com/dinocanada/" target="_blank"><img style="max-width:25px;visibility: visible;padding:0px;" src="link.png" alt=""/></a>
 			
-		<a class="title">Liam Connel</a>
+		<a class="title" style="font-family: Tonight">Liam Connel</a>
 		<a class="title"><img style="max-width:50%;visibility: visible;" src="Liam.png" alt=""/></a>
 		<a class="title" href="https://www.instagram.com/theliamconnel/" target="_blank"><img style="max-width:25px;visibility: visible;padding:0px;" src="link.png" alt=""/></a>
 		
