--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	
 	<div class="header">
-		<a class="logo" style="font-family: Tonight" >Edmonton Comedy</a>
+		<a class="logo">Edmonton Comedy</a>
 		 <div class="header-right">
     		<a class="active" href="index.html">Home</a>
     		<a class="active" href="shows.html">Shows</a>
@@ -20,7 +20,7 @@
 	<img style="margin:0px;visibility:visible;max-width::100%;" src="Grindstone.png" alt=""/>
 	
 	<div class="announcements">
-		<center><a class="title" style="font-family: Tonight">Announcements</a>
+		<center><a class="title">Announcements</a>
 		<a class="title"><img style="visibility: visible;max-width:60%;" src="Funniest.png" alt=""/></a>
 		<a class="title" style="font-family:'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, 'sans-serif';font-size:30px;">Funniest Person with a Day Job is back at the Comic Strip every Tuesday from April 12th to the finale on May 24th, 2022!</a>
 		<a class="title"><img style="visibility: visible;max-width:60%;" src="Ukraine.png" alt=""/></a>
