--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 
 <body>
 	<div class="header">
-		<a class="logo" style="font-family: Tonight">Edmonton Comedy</a>
+		<a class="logo">Edmonton Comedy</a>
 		 <div class="header-right">
     		<a class="active" href="index.html">Home</a>
     		<a class="active" href="shows.html">Shows</a>
