--- a/shows.html
+++ b/shows.html
@@ -9,7 +9,7 @@
 
 <body>
 	<div class="header">
-		<a class="logo" style="font-family: Tonight">Edmonton Comedy</a>
+		<a class="logo">Edmonton Comedy</a>
 		 <div class="header-right">
     		<a class="active" href="index.html">Home</a>
     		<a class="active" href="shows.html">Shows</a>
@@ -21,7 +21,7 @@
 <p style="color:white;font-family: 'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, 'sans-serif';font-size:20px;text-align:center;">Please note that Fringe week and holidays may affect the regularity of some shows, make
 sure to check with the link beforehand</p>
 	<div class="announcements">
-		<a class="title" style="font-family: Tonight">Monday</a>		
+		<a class="title">Monday</a>		
 		<div class="text">
 			<a class="description" style="text-align:end">The Goddamn Monday Comedy Show</a>
 			<a class="description" style="text-align:end">Polar Park Brewing Co. - 10416 80 Ave NW, Edmonton AB</a>
@@ -38,7 +38,7 @@ sure to check with the link beforehand</p>
 			<a class="description" href="https://www.instagram.com/roughcutroom/" target="_blank"><img style="max-width:25px;visibility: visible;float:right" src="link.png" alt=""/></a>
 		</div>
 		<a class="shows"><img style="max-width:30%;visibility: visible;vertical-align: text-top;" src="RoughCutRoom.png" alt=""/></a>
-		<a class="title" style="font-family: Tonight">Tuesday</a>
+		<a class="title">Tuesday</a>
 		<div class="text">
 			<a class="description" style="text-align:end">Triple Threat Tuesday</a>
 			<a class="description" style="text-align:end">The Comic Strip – West Edmonton Mall</a>
@@ -55,7 +55,7 @@ sure to check with the link beforehand</p>
 			<a class="description" href="https://www.instagram.com/blakbarcomedy/" target="_blank"><img style="max-width:25px;visibility: visible;float:right" src="link.png" alt=""/></a>
 		</div>
 		<a class="shows"><img style="max-width:30%;visibility: visible;vertical-align: text-top;" src="Blakbar.png" alt=""/></a>
-		<a class="title" style="font-family: Tonight">Wednesday</a>
+		<a class="title">Wednesday</a>
 				<div class="text">
 			<a class="description" style="text-align:end">Wednesday Night Live</a>
 			<a class="description" style="text-align:end">The Station on Jasper - 10524 Jasper Ave NW, Edmonton AB</a>
@@ -87,7 +87,7 @@ sure to check with the link beforehand</p>
 			<a class="description" href="https://www.facebook.com/GrindstoneTheatre" target="_blank"><img style="max-width:25px;visibility: visible;float:right" src="link.png" alt=""/></a>
 		</div>
 		<a class="shows"><img style="max-width:30%;visibility: visible;vertical-align: text-top;" src="GrindstoneOpenMic.png" alt=""/></a>	
-		<a class="title" style="font-family: Tonight">Thursday</a>
+		<a class="title">Thursday</a>
 		<div class="text">
 			<a class="description" style="text-align:end">Yuk Yuk's ProAm</a>
 			<a class="description" style="text-align:end">YUK YUKS in Century Casino-13103 Fort Road, Edmonton AB</a>
@@ -104,7 +104,7 @@ sure to check with the link beforehand</p>
 			<a class="description" href="https://www.facebook.com/groups/154323511419014" target="_blank"><img style="max-width:25px;visibility: visible;float:right" src="link.png" alt=""/></a>
 		</div>
 		<a class="shows"><img style="max-width:30%;visibility: visible;vertical-align: text-top;" src="underdog.png" alt=""/></a>
-		<a class="title" style="font-family: Tonight">Friday</a>
+		<a class="title">Friday</a>
 		<div class="text">
 			<a class="description" style="text-align:end">The Weekly</a>
 			<a class="description" style="text-align:end">Grindstone Comedy Theatre - 10019 81 Ave NW, Edmonton AB</a>
@@ -129,7 +129,7 @@ sure to check with the link beforehand</p>
 			<a class="description" href="https://www.instagram.com/thestandupshow/" target="_blank"><img style="max-width:25px;visibility: visible;float:right" src="link.png" alt=""/></a>
 		</div>
 		<a class="shows"><img style="max-width:30%;visibility: visible;vertical-align: text-top;" src="TheStandUpShow.png" alt=""/></a>
-		<a class="title" style="font-family: Tonight">Saturday</a>
+		<a class="title">Saturday</a>
 		<div class="text">
 			<a class="description" style="text-align:end">The Comedy Factory</a>
 			<a class="description" style="text-align:end">Gateway Entertainment Centre, 3414 Gateway Blvd, Edmonton, AB</a>
