--- a/profiles.html
+++ b/profiles.html
@@ -20,7 +20,7 @@
 	
 	<div class="announcements">
 		<a class="title">Edmonton Comedians</a>
-		<center><a class="title" style="font-family: Tonight">Kyle Canniff</a>
+		<center><a class="title">Kyle Canniff</a>
 		<a class="title"><img style="max-width:50%;visibility: visible;" src="Kyle.png" alt=""/></a>
 		<a class="title" href="instagram.com/native_moustache/" target="_blank"><img style="max-width:25px;visibility: visible;padding:0px;" src="link.png" alt=""/></a>
 			
