--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div class="announcements">
 		<center><a class="title">Announcements</a>
 		<a class="title"><img style="visibility: visible;max-width:60%;" src="Funniest.png" alt=""/></a>
-		<a class="title" style="font-family:Quicksand;">Funniest Person with a Day Job is back at the Comic Strip every Tuesday from April 12th to the finale on May 24th, 2022!</a>
+		<a class="title" style="font-family:Quicksand;font-size:30px;">Funniest Person with a Day Job is back at the Comic Strip every Tuesday from April 12th to the finale on May 24th, 2022!</a>
 		<a class="title"><img style="visibility: visible;max-width:60%;" src="Ukraine.png" alt=""/></a>
 		<a class="title" style="font-family:Quicksand;font-size:30px;">Comedy fundraiser for the Ukrainian Red Cross Effort on April 14th, 2022 8pm at the REC Room. All proceeds are going to charity!  </a>
 		</center>
