--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <link href="yegcomedy.css" rel="stylesheet" type="text/css">
 <html>
+<meta name="description" content="An incomplete list of Amatuer Stand Up Comedy and Professional Stand Up Comedy shows in Edmonton, Alberta, Canada. Looking for things to do in Edmonton? All of these shows offer unique experiences.">
 <head>
 <link rel="stylesheet" href="yegcomedy.css">
 <meta charset="utf-8">
