--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <meta name="description" content="An incomplete list of Amatuer Stand Up Comedy and Professional Stand Up Comedy shows in Edmonton, Alberta, Canada. Looking for things to do in Edmonton? All of these shows offer unique experiences.">
 <head>
+	<title> Edmonton Comedy </title>
 <link rel="stylesheet" href="yegcomedy.css">
 <meta charset="utf-8">
 <title>yegcomedy</title>
