--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="yegcomedy.css">
-<title>Edmonton Comedy Shows</title>
+<title>Edmonton Comedy Menu</title>
 <link href="yegcomedy.css" rel="stylesheet" type="text/css">
 </head>
 
