--- a/shows.html
+++ b/shows.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" href="yegcomedy.css">
 <meta charset="utf-8">
-<title>yegcomedyshows</title>
+<title> Edmonton Comedy Shows</title>
 <link href="yegcomedy.css" rel="stylesheet" type="text/css">
 </head>
 
