--- a/shows.html
+++ b/shows.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" href="yegcomedy.css">
 <meta charset="utf-8">
+<meta name="description" content="An incomplete list of Amatuer Stand Up Comedy and Professional Stand Up Comedy shows in Edmonton, Alberta, Canada. Looking for things to do in Edmonton? All of these shows offer unique experiences.">
 <title> Edmonton Comedy Shows</title>
 <link href="yegcomedy.css" rel="stylesheet" type="text/css">
 </head>
