--- a/profiles.html
+++ b/profiles.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" href="yegcomedy.css">
 <meta charset="utf-8">
+	<meta name="description" content="Some of Edmontons best Stand Up Comedians.">
 <title> Edmonton Comedy Profiles</title>
 <link href="yegcomedy.css" rel="stylesheet" type="text/css">
 </head>
