--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	
 	<div class="announcements">
 		<center><a class="title">Announcements</a>
-		<a class="title"><img style="visibility: visible;max-width:60%;" src="NakedTruthPoter.png" alt=""/></a>
+		<a class="title"><img style="visibility: visible;max-width:60%;" src="NakedTruthPoster.png" alt=""/></a>
 		<a class="title" style="font-family:Quicksand;font-size:30px;">The inaugural show of Naked Truth Stand Up Comedy Night is happening May 8, 2022 at the Naked Cafe (10303 108 St NW, Edmonton, AB) at 7pm. This show offers a safe space atmosphere for comedians and audience members and is alcohol-free. </a>
 		<a class="title"><img style="visibility: visible;max-width:60%;" src="Funniest.png" alt=""/></a>
 		<a class="title" style="font-family:Quicksand;font-size:30px;">Funniest Person with a Day Job is back at the Comic Strip every Tuesday from April 12th to the finale on May 24th, 2022!</a>
