--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
       },
       "image": [
-        "NakedTruthPoster.png",
+        "NakedTruthPoster.png"
        ],
       "description": "A safer space comedy show for anyone interested in enjoying comedy in an inclusive atmosphere",
       "organizer": {
