--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           "streetAddress": " 10303 108 St NW",
           "addressLocality": "Edmonton",
           "postalCode": "T5J 4Z7",
-          "addressRegion": "AB",
-          "addressCountry": "CA"
+          "addressRegion": "Alberta",
+          "addressCountry": "Canada"
         }
       },
       "image": [
