--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 	
 	<div class="announcements">
 		<center><a class="title">Announcements</a>
-		<a class="title"><img style="visibility: visible;max-width:60%;" src="NakedTruthPoster.png" alt=""/></a>
+		<a class="title" href="https://fb.me/e/1xOG2AjlP"><img style="visibility: visible;max-width:60%;" src="NakedTruthPoster.png" alt=""/></a>
 		<a class="title" style="font-family:Quicksand;font-size:30px;">The inaugural show of Naked Truth Stand Up Comedy Night is happening May 8, 2022 at the Naked Cafe (10303 108 St NW, Edmonton, AB) at 7pm. This show offers a safer space atmosphere for comedians and audience members and is alcohol-free. </a>
-		<a class="title"><img style="visibility: visible;max-width:60%;" src="Funniest.png" alt=""/></a>
+		<a class="title" href="https://wem.thecomicstrip.ca/shows-tickets/"><img style="visibility: visible;max-width:60%;" src="Funniest.png" alt=""/></a>
 		<a class="title" style="font-family:Quicksand;font-size:30px;">Funniest Person with a Day Job is back at the Comic Strip every Tuesday from April 12th to the finale on May 24th, 2022!</a>
 		<a class="title"><img style="visibility: visible;max-width:60%;" src="Skits.png" alt=""/></a>
 		<a class="title" style="font-family:Quicksand;font-size:30px;"> Skits and Giggles is the perfect improv show for the people who "don't like improv". Using long form improv, audience participation, and a crazy dynamic duo, Skits and Giggles is a side-splitting, pants-sKitting must see. But watch out- they're going to improvise a story about you!  </a>
