--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <meta name="description" content="An incomplete list of Amatuer Stand Up Comedy and Professional Stand Up Comedy shows in Edmonton, Alberta, Canada. Looking for things to do in Edmonton? All of these shows offer unique experiences.">
 <head>
+	<link rel="icon" href="http://www.edmontoncomedy.ca/hamburger.png">
 	<title> Edmonton Comedy </title>
 	
     <script type="application/ld+json">
