--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
 <title>Edmonton Comedy Menu</title>
 <link href="yegcomedy.css" rel="stylesheet" type="text/css">
 </head>
+	<link rel="icon" href="https://www.edmontoncomedy.ca/hamburger.png">
 
 <body>
 	<div class="header">
