--- a/shows.html
+++ b/shows.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+	<link rel="icon" href="https://www.edmontoncomedy.ca/hamburger.png">
 <link rel="stylesheet" href="yegcomedy.css">
 <meta charset="utf-8">
 <meta name="description" content="An incomplete list of Amatuer Stand Up Comedy and Professional Stand Up Comedy shows in Edmonton, Alberta, Canada. Looking for things to do in Edmonton? All of these shows offer unique experiences.">
