--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<a class="title" href="https://wem.thecomicstrip.ca/shows-tickets/" target="_blank"><img style="visibility: visible;max-width:60%;" src="Funniest.png" alt=""/></a>
 		<a class="title" style="font-family:Quicksand;font-size:30px;">Funniest Person with a Day Job is back at the Comic Strip every Tuesday from April 12th to the finale on May 24th, 2022!</a>
 		<a class="title" href="https://www.facebook.com/outoftheblueyeg" target="_blank"><img style="visibility: visible;max-width:60%;" src="BlueChairAdamBlank.png" alt=""/></a>
-		<a class="title" style="font-family:Quicksand;font-size:30px;"> Join us Thursday, May 19th at 7pm for a night of laughs. As usual, there will be food and drink specials including $7 pints of @seachangebrewingco. Book your spot early by calling 780-989-2861! </a>
+		<a class="title" style="font-family:Quicksand;font-size:30px;"> Join us Thursday, May 19th at 7pm for a night of laughs at the Out of the Blue Comedy Night. As usual, there will be food and drink specials including $7 pints of @seachangebrewingco. Book your spot early by calling 780-989-2861! </a>
 		</center>
 	</div>
 	<div class="footer">
