--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<a class="title" style="font-family:Quicksand;font-size:30px;">The inaugural show of Naked Truth Stand Up Comedy Night is happening May 8, 2022 at the Naked Cafe (10303 108 St NW, Edmonton, AB) at 7pm. This show offers a safer space atmosphere for comedians and audience members and is alcohol-free. </a>
 		<a class="title" href="https://wem.thecomicstrip.ca/shows-tickets/" target="_blank"><img style="visibility: visible;max-width:60%;" src="Funniest.png" alt=""/></a>
 		<a class="title" style="font-family:Quicksand;font-size:30px;">Funniest Person with a Day Job is back at the Comic Strip every Tuesday from April 12th to the finale on May 24th, 2022!</a>
-		<a class="title" href="https://www.facebook.com/outoftheblueyeg" target="_blank"><img style="visibility: visible;max-width:60%;" src="BlueChairAdamBlank.png" alt=""/></a>
+		<a class="title" href="https://www.facebook.com/outoftheblueyeg" target="_blank"><img style="visibility: visible;max-width:60%;" src="BlueChairRyan.png" alt=""/></a>
 		<a class="title" style="font-family:Quicksand;font-size:30px;"> Join us Thursday, May 12th at 7pm for a night of laughs at the Out of the Blue Comedy Night. As usual, there will be food and drink specials including $7 pints of @seachangebrewingco. Book your spot early by calling 780-989-2861! </a>
 		</center>
 	</div>
