--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<div class="announcements">
 		<center><a class="title">Announcements</a>
 		<a class="title" href="https://fb.me/e/1xOG2AjlP" target="_blank"><img style="visibility: visible;max-width:60%;" src="NakedTruthFlyerJune.png" alt=""/></a>
-		<a class="title" style="font-family:Quicksand;font-size:30px;">The inaugural show of Naked Truth Stand Up Comedy Night is happening June 12, 2022 at the Naked Cafe (10303 108 St NW, Edmonton, AB) at 7pm and is completely free. This show offers a safer space atmosphere for comedians and audience members and is alcohol-free. </a>
+		<a class="title" style="font-family:Quicksand;font-size:30px;">The second show of Naked Truth Stand Up Comedy Night is happening June 12, 2022 at the Naked Cafe (10303 108 St NW, Edmonton, AB) at 7pm and is completely free. This show offers a safer space atmosphere for comedians and audience members and is alcohol-free. </a>
 		<a class="title" href="https://wem.thecomicstrip.ca/shows-tickets/" target="_blank"><img style="visibility: visible;max-width:60%;" src="Funniest.png" alt=""/></a>
 		<a class="title" style="font-family:Quicksand;font-size:30px;">Funniest Person with a Day Job is back at the Comic Strip every Tuesday from April 12th to the finale on May 24th, 2022!</a>
 		<a class="title" href="https://www.facebook.com/outoftheblueyeg" target="_blank"><img style="visibility: visible;max-width:60%;" src="BlueChairRyan.png" alt=""/></a>
