--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 		<center><a class="title">Announcements</a>
 		<a class="title" href="https://www.facebook.com/nakedtruthyeg/" target="_blank"><img style="visibility: visible;max-width:60%;" src="NakedTruthFlyerJune.png" alt=""/></a>
 		<a class="title" style="font-family:Quicksand;font-size:30px;">The second show of Naked Truth Stand Up Comedy Night is happening June 12, 2022 at the Naked Cafe (10303 108 St NW, Edmonton, AB) at 7pm and is completely free. This show offers a safer space atmosphere for comedians and audience members and is alcohol-free. </a>
-		<a class="title" href="https://wem.thecomicstrip.ca/shows-tickets/" target="_blank"><img style="visibility: visible;max-width:60%;" src="Funniest.png" alt=""/></a>
-		<a class="title" style="font-family:Quicksand;font-size:30px;">Funniest Person with a Day Job is back at the Comic Strip every Tuesday from April 12th to the finale on May 25th, 2022!</a>
+		<a class="title" href="https://www.showpass.com/jokesplease-june11/" target="_blank"><img style="visibility: visible;max-width:60%;" src="JokePlease.png" alt=""/></a>
+		<a class="title" style="font-family:Quicksand;font-size:30px;">Look forward to a very funny stand-up guest or two and then a closing set by Ross Dauk. Named “Best Comedian in Vancouver” by Canada's Largest Urban Weekly Newspaper, Ross has headlined across Canada and is featured on a newly released album by Just For Laughs. He also once SUCCESSFULLY gave someone the Heimlich Remover. It was the best. Get some tickets and see you Saturday June 11th!</a>
 		<a class="title" href="https://www.grindstonecomedyfest.com/" target="_blank"><img style="visibility: visible;max-width:60%;" src="GrindstoneFest.png" alt=""/></a>
 		<a class="title" style="font-family:Quicksand;font-size:30px;">The Grindstone is ready to bring back laughter to Edmonton and are thrilled to host some of Canada’s top Comedians, Sketch groups & Improvisors. </a>
 		</center>
