--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
 	
 	<div class="announcements">
 		<center><a class="title">Announcements</a>
-		<a class="title" href="https://www.facebook.com/nakedtruthyeg/" target="_blank"><img style="visibility: visible;max-width:60%;" src="NakedTruthFlyerJune.png" alt=""/></a>
-		<a class="title" style="font-family:Quicksand;font-size:30px;">The second show of Naked Truth Stand Up Comedy Night is happening June 12, 2022 at the Naked Cafe (10303 108 St NW, Edmonton, AB) at 7pm and is completely free. This show offers a safer space atmosphere for comedians and audience members and is alcohol-free. </a>
-		<a class="title" href="https://www.showpass.com/jokesplease-june11/" target="_blank"><img style="visibility: visible;max-width:60%;" src="JokePlease.png" alt=""/></a>
-		<a class="title" style="font-family:Quicksand;font-size:30px;">Look forward to a very funny stand-up guest or two and then a closing set by Ross Dauk. Named “Best Comedian in Vancouver” by Canada's Largest Urban Weekly Newspaper, Ross has headlined across Canada and is featured on a newly released album by Just For Laughs. He also once SUCCESSFULLY gave someone the Heimlich Remover. It was the best. Get some tickets and see you Saturday June 11th!</a>
+		<a class="title" href="https://www.facebook.com/nakedtruthyeg/" target="_blank"><img style="visibility: visible;max-width:60%;" src="NakedTruthJulyFlyer.png" alt=""/></a>
+		<a class="title" style="font-family:Quicksand;font-size:30px;">The next show of Naked Truth Stand Up Comedy Night is happening July 10, 2022 at the Naked Cafe (10303 108 St NW, Edmonton, AB) at 7pm and is completely free. This show offers a safer space atmosphere for comedians and audience members and is alcohol-free. </a>
+		<a class="title" href="https://www.facebook.com/outoftheblueyeg" target="_blank"><img style="visibility: visible;max-width:60%;" src="BlueChairMike.png" alt=""/></a>
+		<a class="title" style="font-family:Quicksand;font-size:30px;">We're back July 14th with another #yeg favorite, @graciesfunnydad Mike Dambra headlining. Sit up front if you dare! Mike has established himself as a favorite among many, and has performed along side icons like Howie Mandel, Rosie O’Donnell, Adam Sandler and Michael Bolton. As always, our friends at @seachangebrewingco are sponsoring this event, and there will be food and drink specials. Reserve early by calling 780-989-2861. </a>
+		<a class="title" href="https://www.yukyuks.com/?action=club.thisMonth&venueID=2480&startDate=2022,06,14" target="_blank"><img style="visibility: visible;max-width:60%;" src="yukyuksummer.png" alt=""/></a>
+		<a class="title" style="font-family:Quicksand;font-size:30px;"> Come down to Yuk Yuk’s for a night of hilarity featuring professional & amateur comedians! It’s a show that can be good, bad or so bad it’s great! $5 Tickets $6 Domestic Bottles </a>
 		<a class="title" href="https://www.grindstonecomedyfest.com/" target="_blank"><img style="visibility: visible;max-width:60%;" src="GrindstoneFest.png" alt=""/></a>
 		<a class="title" style="font-family:Quicksand;font-size:30px;">The Grindstone is ready to bring back laughter to Edmonton and are thrilled to host some of Canada’s top Comedians, Sketch groups & Improvisors. </a>
 		</center>
