--- a/shows.html
+++ b/shows.html
@@ -118,7 +118,17 @@ sure to check with the link beforehand</p>
 			<a class="description" href="https://thecomedyfactory.com/club/" target="_blank"><img style="max-width:25px;visibility: visible;" src="link.png" alt=""/></a>
 		</div>
 		<a class="shows"><img style="max-width:40%;visibility: visible;vertical-align: text-top;" src="TheComedyFactory.png" alt=""/></a>
-</div>
+		</div>
+		<a class="title">Sunday</a>
+		<div class="text">
+			<a class="description">Sunday Best Comedy Show</a>
+			<a class="description"> Fargo's Restaurant & Pub - 5804 Terrace Road</a>
+			<a class="description">Every Sunday Night at 8pm</a>
+			<a class="description">Free</a>
+			<a class="description" href="https://www.instagram.com/sundaybestcomedyshow/" target="_blank"><img style="max-width:25px;visibility: visible;" src="link.png" alt=""/></a>
+		</div>
+		<a class="shows"><img style="max-width:40%;visibility: visible;vertical-align: text-top;" src="Fargos.png" alt=""/></a>
+		</div>
 	
 	<div class="footer">
 		<a class="text">See you at a show soon!</a>
